--- a/pos.css
+++ b/pos.css
@@ -28,12 +28,29 @@ section{
 	width:  100%;
 	padding: 1rem 0;
 	min-height: 300px;
+	display: block; /* das ist das Ursprüngliche, was es eh schon ist. steht nur da zur Klarheit */
+
+
+	/* ----- hier habe ich jetzt viel auskommentiert, weil wir media queries gemacht haben und die Hauptangaben beziehen sich jetzt nur aufs Smartphone
+
+  display: flex;
+	flex-wrap: wrap;
+	align-items: stretch;  Eigenschaften für die y-Achse, also die vertikale
+	justify-content: space-between;  Eigenschaften für die x-Achse, also die horizontale*/
+
 }
 
 
 .col{
-	width: 50px;
+	width: 100%;
 	min-height: 50px;
+	/* flex-grow: 1;
+	   flex-shrink: 1;   flex-shrink: 0; heißt: du darfst nicht schrumpfen
+     flex-basis: auto;
+	   flex: 1 1 auto;  wäre die Kurzschreibweise für die drei oberen Zeilen
+  flex: 1 1 calc(50% - 20px); */
+  margin: 10px;
+
 }
 
 .trolley-grey{
@@ -52,4 +69,37 @@ section{
 
 .black{
 	background: #000;
+}
+
+.orange{
+	background: orange;
+}
+
+.olive{
+	background: olive;
+}
+
+
+/* für Tablets */
+@media (min-width: 768px) and (max-width: 1023px) {
+  .row {
+		display: flex;
+		flex-wrap: wrap;
+	}
+
+	.col {
+		flex: 1 1 calc(50% - 20px);
+	}
+}
+
+/* für Desktops */
+@media (min-width: 1024px) {
+	.row {
+		display: flex;
+		flex-wrap: wrap;
+	}
+
+	.col {
+ 		flex: 1 1 calc(33.3333333333% - 20px);
+	}
 }
